# YourConference

./: README.md  docker-compose.yaml  my_db.db  pyproject.toml
src/yo/: main.py
src/yo/application/: __init__.py
src/yo/application/exceptions/: __init__.py  application.py  permission.py  registration.py  review.py  session.py  user.py
src/yo/application/models/: __init__.py  user.py
src/yo/application/postgres/: __init__.py  postgres_conn.py
src/yo/application/postgres/migrations/: env.py
src/yo/application/postgres/orm_models/: __init__.py  admin.py  conference.py  place.py  registration.py  review.py  topic.py  user.py
src/yo/application/redis/: __init__.py  async_session_manager.py  redis_conn.py
src/yo/application/services/: __init__.py  create_review.py
src/yo/application/services/auth/: __init__.py  admin_login.py  create_user.py  user_login.py
src/yo/infrastructure/: __init__.py  data_mappers.py
src/yo/infrastructure/db_connections/: __init__.py  postgres_conn.py  redis_conn.py
src/yo/infrastructure/di/: __init__.py  redis_conn.py
src/yo/infrastructure/migrations/: initial.py
src/yo/infrastructure/postgres/: __init__.py
src/yo/infrastructure/services/: __init__.py  async_session_manager.py
src/yo/presentation/: __init__.py  main.py
src/yo/presentation/pydantic_forms/: review_form.py
src/yo/presentation/routers/: __init__.py  auth.py  conference.py  registration.py  review.py  start.py
src/yo/presentation/templates/: index.html
src/yo/presentation/validation_models/: __init__.py  admin_form.py
(+32 files in other folders)
