[tool.poetry]
name = "yo"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
