[tool.poetry]
name = "yo"
version = "0.1.0"
description = ""
authors = ["ShapovalovIlia <ilia-shapvalov04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.20"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
redis = "^5.2.1"
types-redis = "^4.6.0.20241004"
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
